--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 html, body {
-  margin: 0;
-  padding: 0;
+  margin: 10;
+  padding: 10;
 }
 
 canvas {
   display: block;
+}
+
+h1, h2, h3, h4, h5, h6{
+  text-align: left;
+  margin: 20px 0;
+  font-weight: normal;
+}
+
+h1 {
+  font-size: 1.25em;
+  color: #333;
 }
