--- a/style.css
+++ b/style.css
@@ -36,3 +36,13 @@ h1 {
   font-size: 2em;
   font-family: dunkel-serif-expanded, sans-serif;
 }
+
+h2 {
+  font-size: 1.5em;
+  font-family: rixrak-serif-pro, sans-serif;
+}
+
+h3 {
+  font-size: 1.2em;
+  font-family: rixrak-serif-pro, sans-serif;
+}
